# aoc2024

./: Cargo.toml
src/: main.rs  solution.rs
src/day1/: mod.rs  test.rs
src/day10/: mod.rs  test.rs
src/day11/: mod.rs  test.rs
src/day12/: mod.rs  test.rs
src/day13/: mod.rs  test.rs
src/day14/: mod.rs  test.rs
src/day15/: mod.rs  test.rs
src/day16/: mod.rs  test.rs
src/day17/: computer.rs  instruction.rs  mod.rs  operation.rs  parser.rs  test.rs
src/day18/: mod.rs  test.rs
src/day19/: mod.rs  test.rs
src/day2/: mod.rs  test.rs
src/day20/: mod.rs  test.rs
src/day21/: mod.rs  test.rs
src/day22/: mod.rs  test.rs
src/day23/: mod.rs  test.rs
src/day24/: mod.rs  test.rs
src/day25/: mod.rs  test.rs
src/day3/: mod.rs  test.rs
src/day4/: mod.rs  test.rs
src/day5/: mod.rs  test.rs
src/day6/: mod.rs  test.rs
src/day7/: mod.rs  test.rs
src/day8/: mod.rs  test.rs
src/day9/: mod.rs  test.rs
src/utils/: mod.rs
src/utils/geometry/: mod.rs
src/utils/nalgebra/: mod.rs
