[package]
name = "advent-of-code-2024"
version = "0.0.1"
edition = "2021"

[dependencies]
code-timing-macros = { version = "0.0.5", features = ["release"] }
regex = "1.11.1"
nalgebra = "0.33.2"
once_cell = "1.17"
maplit = "1.0.2"
memoize = "0.4.2"
priority-queue = "2.1.1"
strum = "0.26.3"
strum_macros = "0.26.4"
rayon = "1.10.0"
pathfinding = "4.12.0"
itertools = "0.13.0"
z3 = {version="0.12", features = ["static-link-z3"]}
